src/test/deca/context/invalid/SansObjet/DeclVar-NE-string-int-boolean.deca
// Description:
//    Declaration of a string variable using != operation between a int variable and boolean .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  3; 
    boolean y = true; 
    string z = 3 != true; 
}
